# Asteroids

./: Asteroids.sln  CMakeLists.txt  MeteorsAssests.kra  README.md  installDependencies.bash
Asteroids  ( ECS V1 )/AsteroidsScr (ECS)/Debug/: vc141.idb
Asteroids  ( ECS V2 )/AsteroidsScr (ECS)/: Asteroids.vcxproj
Asteroids  ( ECS V2 )/AsteroidsScr (ECS)/Assests/: MeteorsAssests.png~
Asteroids  ( ECS V2 )/AsteroidsScr (ECS)/Debug/: vc141.idb
Asteroids  ( ECS V2 )/AsteroidsScr (ECS)/Game/: SystemManagerNamespace.h  stdafx.h
Asteroids  ( ECS V2 )/AsteroidsScr (ECS)/Tools/: TM.h
Asteroids  ( ECS V2 )/Release/: Asteroids.ipdb
Asteroids  ( ECS V3 )/AsteroidsScr (ECS)/: Asteroids.vcxproj
Asteroids  ( ECS V3 )/AsteroidsScr (ECS)/Game/: SystemManagerNamespace.h
Asteroids  ( ECS V4 )/: Asteroids (ECS V4).sln
Asteroids  ( ECS V4 )/AsteroidsScr (ECS)/: Asteroids.vcxproj
Asteroids  ( ECS V4 )/AsteroidsScr (ECS)/Assests/: MeteorsAssests.png~
Asteroids  ( ECS V4 )/AsteroidsScr (ECS)/Debug/: vc141.idb
Asteroids  ( ECS V4 )/AsteroidsScr (ECS)/Tools/: Rect.h
Asteroids  ( ECS V4 )/Release/: Asteroids.ipdb
Asteroids  ( ECS V4)/AsteroidsScr (ECS)/Assests/: MeteorsAssests.png~
Asteroids  ( ECS V4)/AsteroidsScr (ECS)/Debug/: vc141.idb
Asteroids  ( ECS V5 & Release)/Release/: Asteroids.ipdb
Asteroids  ( ECS V5)/AsteroidsScr (ECS)/: Asteroids.vcxproj
Asteroids  ( ECS V5)/AsteroidsScr (ECS)/Debug/: vc141.idb  vc142.idb
Asteroids ( V1)/AsteroidsScr/Debug/: vc141.idb
Asteroids ( V1)/AsteroidsScr/Game/: stdafx.h
Asteroids ( V1)/AsteroidsScr/Game/Game/: Game.cpp  (+1 more)
Asteroids ( V1)/Debug/: SpaceShooter.ilk  Template(Revised).ilk
Asteroids (V1)/: Asteroids (V1).sln
Asteroids (V1)/AsteroidsScr/: Asteroids.filters
Asteroids Source/: Asteroids.vcxproj
Asteroids Source/Game/Components/: ButtonComponents.h
Asteroids Source/Game/Entities/: EntityManager.cpp
Asteroids Source/Game/Game/: Game.cpp
Asteroids Source/Tools/: TM.cpp
Asteroids/AsteroidsScr/: Asteroids.vcxproj
Asteroids/AsteroidsScr/Tools/: Input.h
Dodge/: Template.vcxproj
Dodge (Asteroids Alpha)/: Dodge.sln  Template.vcxproj.filters
Dodge (Asteroids Alpha)/Game/: Game.cpp  Game.h  Meteor.h  Player.h
Dodge (Asteroids Alpha)/Tools/: Input.h  TM.h
Dodge/Game/: Setup.h  main.cpp  stdafx.h
Dodge/Tools/: TM.cpp
Game/: SystemManagerNamespace.h  stdafx.h
Game/Components/: EntityComponents.h
Game/Entities/: Entity.h  EntityManager.cpp  EntityManager.h
Game/Game/: Game.cpp  Game.h  Setup.h  main.cpp
Game/Scenes/InGameControllerSwitch/: Switch.cpp
Game/Scenes/Menu/: Menu.cpp
Game/Scenes/SceneManager/: SceneManager.cpp  SceneManager.h
Game/Systems/BulletSystem/: BulletSystem.h
Game/Systems/CameraSystem/: CameraSystem.h
Game/Systems/CollisionSystem/: CollisionSystem.h
Game/Systems/DeathSystem/: DeathSystem.h
Game/Systems/LevelSystem/: LevelSystem.cpp  Levels.json
Game/Systems/RenderingSystem/: RenderingSystem.cpp
Game/Systems/ScoreSystem/: ScoreSystem.cpp
(+217 files in other folders)
